--- a/tmux.conf
+++ b/tmux.conf
@@ -38,8 +38,8 @@ set -g default-shell /bin/zsh
 
 # more custom key bindings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
