Join/split tmux panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -113,8 +113,8 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l' # restoring Clear Screen (C-l)
 
 # join/split panes
-bind J command-prompt -p "join pane from:" "join-pane -s '%%'"
-bind S command-prompt -p "split pane to:" "join-pane -t '%%'"
+bind C-J command-prompt -p "join pane from:" "join-pane -s '%%'"
+bind C-S command-prompt -p "split pane to:" "join-pane -t '%%'"
 
 # load project specific settings
 if-shell 'test -f "~/.tmux.conf.local"' 'source-file ~/.tmux.conf.local'
