Restores Kill rest of line

--- a/tmux.conf
+++ b/tmux.conf
@@ -111,6 +111,7 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l' # restoring Clear Screen (C-l)
+bind C-k send-keys 'C-k' # restoring Kill rest of line (C-k)
 
 # join/split panes
 bind C-J command-prompt -p "join pane from:" "join-pane -s '%%'"
