Under Yosemite (and later) pasteboard access seems to work fine without reattach-to-user-namespace

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,18 +19,14 @@ unbind p
 bind p paste-buffer
 
 # Setup 'v' to begin selection as in Vim
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy Enter copy-pipe "pbcopy"
 
 # Increase history limit
 set -g history-limit 10000
-
-# Enable Mac OS X clipboard
-set -g default-command "reattach-to-user-namespace -l zsh"
 
 # zsh
 set -g default-command /bin/zsh
@@ -88,17 +84,6 @@ set -g message-attr bright
 set -g status-left ' #S ⡇' # session name
 set -g status-left-length 20
 set -g status-right '#(sysctl vm.loadavg | cut -b 14-29)⡇ #H ' # host name
-
-# Enable native Mac OS X copy/paste
-#
-#  $ git clone https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard.git
-#  $ cd tmux-MacOSX-pasteboard/
-#  $ make reattach-to-user-namespace
-#  $ sudo mv reattach-to-user-namespace /usr/local/bin
-#
-set -g default-command "reattach-to-user-namespace -l zsh"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
 # recording program output to a log
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
