--- a/tmux.conf
+++ b/tmux.conf
@@ -36,12 +36,6 @@ set -g default-shell /bin/zsh
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
@@ -90,13 +84,11 @@ bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 # smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind C-l send-keys 'C-l' # restoring Clear Screen (C-l)
-bind C-k send-keys 'C-k' # restoring Kill rest of line (C-k)
+bind h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind \ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # join/split panes
 bind C-J command-prompt -p "join pane from:" "join-pane -s '%%'"
