--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,3 @@
-# Set that stupid Esc-Wait off, so VI works again
-set -sg  escape-time 0
-
-# vi is good
-setw -g mode-keys vi
-
 # mouse behavior
 setw -g mode-mouse off
 
@@ -31,15 +25,6 @@ set -g history-limit 10000
 # zsh
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
-
-# more custom key bindings
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
 
 # identify activity in other windows
 setw -g monitor-activity on
@@ -82,20 +67,26 @@ set -g status-right '#(sysctl vm.loadavg | cut -b 14-29)⡇ #H ' # host name
 # recording program output to a log
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
-# smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind \ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 # join/split panes
 bind C-J command-prompt -p "join pane from:" "join-pane -s '%%'"
 bind C-S command-prompt -p "split pane to:" "join-pane -t '%%'"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # load project specific settings
 if-shell 'test -f "~/.tmux.conf.local"' 'source-file ~/.tmux.conf.local'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+# vi is good
+setw -g mode-keys vi
 
 # TIPS:
 #   setup environments with tmuxinator
