Cleans up tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,95 @@
-# mouse behavior
-setw -g mode-mouse off
-
-## always load the reset file first
-# unbind-key -a
-## always load the reset file first
+# reset file first                                               {{{1
+# ------------------------------------------------------------------
 # source-file ~/.tmux.reset.conf
+
+# options                                                        {{{1
+# ------------------------------------------------------------------
+
+# set -g prefix C-a
+# unbind-key C-b
+# bind-key C-a send-prefix
+
+# turn on mouse mode
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# Increase history limit
+set -g history-limit 10000
+
+# zsh
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
+
+# identify activity in other windows
+set -g monitor-activity on
+set -g visual-activity on
+
+# force tmux to use utf-8
+set -gq utf8 on
+
+# start window index at 1
+set -g base-index 1
+
+# start pane index at 1
+set -g pane-base-index 1
+
+# re-number windows when one is closed
+set -g renumber-windows on
+
+# colors                                                         {{{1
+# ------------------------------------------------------------------
+
+# terminal colors
+set -g default-terminal "screen-256color"
+
+set -g status-fg white
+set -g status-bg black
+
+set -g window-status-fg colour108 # colour108 is an olive color
+set -g window-status-bg default
+set -g window-status-attr dim
+
+set -g window-status-current-fg colour156 # colour156 is a lime green color
+set -g window-status-current-bg default
+set -g window-status-current-attr bright
+
+set -g pane-border-fg colour108
+set -g pane-border-bg default
+set -g pane-active-border-fg colour156
+set -g pane-active-border-bg default
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+# status bar                                                     {{{1
+# ------------------------------------------------------------------
+
+# center window list
+set -g status-justify centre
+
+# left and right status bar
+set -g status-left ' #S ⡇' # session name
+set -g status-left-length 20
+set -g status-right '#(sysctl vm.loadavg | cut -b 14-29)⡇ #H ' # host name
+
+# tmp plugins                                                    {{{1
+# ------------------------------------------------------------------
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+# key bindings                                                   {{{1
+# ------------------------------------------------------------------
 
 # remmapping copy and paste keys
 unbind [
@@ -19,75 +104,25 @@ bind -t vi-copy y copy-pipe "pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 bind -t vi-copy Enter copy-pipe "pbcopy"
 
-# Increase history limit
-set -g history-limit 10000
-
-# zsh
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
-
-# identify activity in other windows
-setw -g monitor-activity on
-set -g visual-activity on
-
-# UTF8 characters in status bar
-set -g status-utf8 on
-
-# center window list
-set -g status-justify centre
-
-# terminal colors
-set -g default-terminal "screen-256color"
-
-set -g status-fg white
-set -g status-bg black
-
-setw -g window-status-fg colour108 # colour108 is an olive color
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg colour156 # colour156 is a lime green color
-setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
-
-set -g pane-border-fg colour108
-set -g pane-border-bg default
-set -g pane-active-border-fg colour156
-set -g pane-active-border-bg default
-
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# left and right status bar
-set -g status-left ' #S ⡇' # session name
-set -g status-left-length 20
-set -g status-right '#(sysctl vm.loadavg | cut -b 14-29)⡇ #H ' # host name
-
 # recording program output to a log
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+bind P pipe-pane -o 'cat >> ~/#W-%s-tmux.log' \; display 'Toggled logging to ~/#W-%s-tmux.log'
 
 # join/split panes
 bind C-J command-prompt -p "join pane from:" "join-pane -s '%%'"
 bind C-S command-prompt -p "split pane to:" "join-pane -t '%%'"
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# load project specific settings
-if-shell 'test -f "~/.tmux.conf.local"' 'source-file ~/.tmux.conf.local'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 # vi is good
-setw -g mode-keys vi
+set -g mode-keys vi
+
+# allow clearing of screen in a shell
+bind C-l send-keys 'C-l'
+
+# load project specific settings                                 {{{1
+# ------------------------------------------------------------------
+if-shell 'test -f "~/.tmux.conf.local"' 'source-file ~/.tmux.conf.local'
 
 # TIPS:
 #   setup environments with tmuxinator
 #   setup layouts inspecting :list-windows
+
+# vim:fdl=1 fdm=marker
