Updates tmux 2.5 and macOS Sierra

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,42 +5,27 @@
 # options                                                        {{{1
 # ------------------------------------------------------------------
 
-# set -g prefix C-a
-# unbind-key C-b
-# bind-key C-a send-prefix
+set -gq utf8 on
 
-# turn on mouse mode
 set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
-# Increase history limit
 set -g history-limit 10000
-
-# zsh
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
-
-# identify activity in other windows
 set -g monitor-activity on
-set -g visual-activity on
 
-# force tmux to use utf-8
-set -gq utf8 on
+set -g default-shell $SHELL 
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-# start window index at 1
 set -g base-index 1
-
-# start pane index at 1
 set -g pane-base-index 1
 
-# re-number windows when one is closed
+set -g allow-rename off
 set -g renumber-windows on
+set -g visual-activity on
 
 # colors                                                         {{{1
 # ------------------------------------------------------------------
-
-# terminal colors
 set -g default-terminal "screen-256color"
 
 set -g status-fg white
@@ -66,10 +51,8 @@ set -g message-attr bright
 # status bar                                                     {{{1
 # ------------------------------------------------------------------
 
-# center window list
 set -g status-justify centre
 
-# left and right status bar
 set -g status-left ' #S ⡇' # session name
 set -g status-left-length 20
 set -g status-right '#(sysctl vm.loadavg | cut -b 14-29)⡇ #H ' # host name
@@ -98,11 +81,12 @@ unbind p
 bind p paste-buffer
 
 # Setup 'v' to begin selection as in Vim
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "pbcopy"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# Update default binding of `Enter` to also use copy-pipe
-bind -t vi-copy Enter copy-pipe "pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe-and-cancel
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # recording program output to a log
 bind P pipe-pane -o 'cat >> ~/#W-%s-tmux.log' \; display 'Toggled logging to ~/#W-%s-tmux.log'
